backport: re PR bootstrap/52947 (bootstrap fails due to wrong include search path composition)

Backport from mainline.
        PR bootstrap/52947
        * config/i386/mingw32.h (NATIVE_SYSTEM_HEADER_DIR): Define it always
        as "/mingw/include".

From-SVN: r189339